# space

./: .gitignore  Cargo.toml  LICENSE  chud.nix  default.nix  flake.nix  result  shell.nix  test  test.chud  test.rs  todo.org
.direnv/: nix-profile-pre582946.10b813040df6  nix-profile-pre582946.10b813040df6.rc
res/: Space.desktop
res/colorschemes/: catpuccin_frappe.toml  catpuccin_latte.toml  catpuccin_macchiato.toml  catpuccin_mocha.toml  nord-light.toml  nord.toml  onedark.toml
src/: main.rs  quad.frag  quad.vert  test.frag  test.vert  text.frag
