[package]
name = "space"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustc-flags = ["-C", "link-arg=-fuse-ld=mold"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
freetype-rs = "0.35.0"
glow = "0.13.1"
sdl2 = "0.36.0"
