[package]
name = "space"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "space"


[dependencies]
clap = "4.5.3"
glow = "0.13.1"
notify = "6.1.1"
sdl2 = "0.36.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
swash = "0.1.13"
syntect = { version = "5.2.0", features = ["fancy-regex", "default-fancy"], default-features = false }
toml = "0.8.12"
